# project-enclave

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  ROADMAP_AND_TEAM.md  USER_MANUAL.md  dashboard.py  docker-compose.prod.yml  main.py  pyproject.toml  requirements.txt
core/: exceptions.py
core/agents/: base.py  contracts.py  dynamic_registry.py  event_bus.py  registry.py  state.py  task_queue.py
core/analytics/: __init__.py  lead_scorer.py
core/browser/: __init__.py  browser_tool.py  config.py
core/config/: agent_schema.py  loader.py  schema.py
core/enterprise/: __init__.py  api_server.py  auth_manager.py  gateway.py  models.py
core/genesis/: __init__.py  agent_generator.py  blueprint.py  config_generator.py  credential_manager.py  interview.py  launcher.py  notifications.py  (+2 more)
dashboard/: __init__.py  app.py  auth.py  run.sh  sidebar.py  theme.py
data/: suppression_list.csv
docs/: MASTER_AGENT_PLAN.md
infrastructure/: .env.example  Dockerfile  docker-compose.yml
scripts/: test_phase6_integration.py
tests/: test_agent_config.py  test_agent_registry.py  test_agent_state.py  test_appointment_setter.py  test_browser.py  test_compliance.py  test_edges.py  test_exceptions.py  test_feature_freeze.py  test_god_mode.py  test_governance.py  test_growth_agents.py  test_hive_mind.py  test_logging_config.py  test_mcp_tools.py  test_neural_architecture.py  test_operations_agents.py  test_outreach_agent.py  test_phase3_production.py  test_sandbox.py  test_seo_agent.py  test_sovereign_cockpit.py  test_state.py  test_task_queue.py  test_template_engine.py
(+319 files in other folders)
